[package]
name = "org_ownership_investigation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", rev = "52a90390195e884bcc12ff5bd9fd805cac806447" }
nom = "7.1.1"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", default-features = false, features = ["macros", "process", "rt", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "set-header"] }

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
